[package]
name = "yewstack-demo"
version = "0.1.0"
authors = ["Chuck Rai <cprai@sfu.ca>"]
edition = "2018"
description = "A demo of how to build a yewstack project into a single html file."
repository = "https://github.com/cprai/yewstack_demo"
readme = "README.md"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.70"
yew = "0.17"
